[package]
name = "rainbowtable"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple command-line tool to assist in the creation and use of rainbow tables."
homepage = "https://astroorbis.com"
repository = "https://github.com/astroorbis/rainbowtable"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
hashy = "0.1.0"
inquire = "0.6.2"
rusqlite = "0.29.0"
touch = "0.0.1"

[[bin]]
name = "rainbowtable"
path = "src/main.rs"
