[package]
name = "rainbowtable"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "A simple command-line tool to assist in the creation and use of rainbow tables."
homepage = "https://astroorbis.com"
repository = "https://github.com/astroorbis/rainbowtable"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
dirs = "5.0.1"
hashy = "0.1.0"
indicatif = "0.17.5"
inquire = "0.6.2"
reqwest = { version = "0.11.18", features = ["blocking"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
touch = "0.0.1"

[[bin]]
name = "rainbowtable"
path = "src/main.rs"
